<resources>
    <string name="app_name">Hello JU</string>
    <string name="nav_sub_title">Event app tag line</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="scheme">http</string>
    <string name="host">www.viaviweb.in</string>
    <string name="pathPrefix">/envato/cc/event_app_demo/</string>
    <string name="get_scheme">event</string>
    <string name="get_host">event_app</string>
    <string name="get_pathPrefix">/</string>
    <string name="isRTL">false</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="applovin_id">FBZJ_asd32qdJsIldv-asdw3qdKtNTMX3asdask_M0k-vasdasd2VXasdasdyT6asd2</string>
    <string name="play_more_app">https://play.google.com/store/apps/dev?id=7157478532572017100</string>
    <string name="facebook_app_id">xxxxxxxxxxxxxxx</string>
    <string name="fb_login_protocol_scheme">xxxxxxxxxxxxxxx</string>
    <string name="home">Home</string>
    <string name="my_event">My Event</string>
    <string name="create_an_event">Create An Event</string>
    <string name="favourite">Favourite</string>
    <string name="favourite_event">Favourite Events</string>
    <string name="recently_view_event">Recently Viewed Event</string>
    <string name="booking_event">Booked Events</string>
    <string name="setting">Setting</string>
    <string name="login">Login</string>
    <string name="category">Category</string>
    <string name="profile">Profile</string>
    <string name="upload">Upload</string>
    <string name="faq">Faq</string>
    <string name="rate_app">Rate App</string>
    <string name="more_app">More App</string>
    <string name="share_app">Share App</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Log Out</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_condition">Terms condition</string>
    <string name="nearby">Nearby</string>
    <string name="more">More</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_pass">Change password</string>
    <string name="change_password_pro">Change Password</string>
    <string name="event_detail">Event Detail</string>
    <string name="create_event">Create Event</string>
    <string name="edit_event">Edit Event</string>
    <string name="delete_event">Delete Event</string>
    <string name="app_name_about_us">abcd</string>
    <string name="about_us_version">Verson</string>
    <string name="about_us_version_text">1.0</string>
    <string name="about_us_author">Author</string>
    <string name="about_us_Company">Company</string>
    <string name="about_us_company_name">abcd</string>
    <string name="about_us_email">Email</string>
    <string name="about_us_email_text">abcd@abcd.com</string>
    <string name="about_us_website">Website</string>
    <string name="about_us_website_text">www.abcd.com</string>
    <string name="about_us_contact">Contact</string>
    <string name="about_us_contact_text">+91 (123) (456) (5678)</string>
    <string name="about_us_about">About</string>
    <string name="ok">Ok</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="view_all">View all</string>
    <string name="on_review">On review</string>
    <string name="approved">Approved</string>
    <string name="no_data_found">No Data Found</string>
    <string name="failed_try_again">Failed try again</string>
    <string name="you_have_not_login">You Have Not Login</string>
    <string name="logout_message">Are you sure you want to logout</string>
    <string name="storage_permission">Please allow storage permission</string>
    <string name="wrong">Something went to wrong please try again later</string>
    <string name="internet_connection">Internet connection not available</string>
    <string name="upload_folder_error">Select from file manager then it will work</string>
    <string name="Please_click_BACK_again_to_exit">Please click BACK again to exit</string>
    <string name="map_not_install">Google map not installed please install google map</string>
    <string name="please_location">Please turn on location to see nearby event location</string>
    <string name="Let_me_recommend_you_this_application">Let me recommend you this application</string>
    <string name="please_allow_location">Please allow location permission to see nearby event location</string>
    <string name="lorem">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vehicula sem a malesuada rhoncus.
        Pellentesque ut dolor a dui porttitor porta lacinia non libero.
    </string>
    <string name="welcome_back">Welcome back</string>
    <string name="sign_into_continue">Sign in to continue</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="conform_password">Conform password</string>
    <string name="phoneNo">Phone No</string>
    <string name="remember_me">Remember Me</string>
    <string name="skip">Skip</string>
    <string name="button_text_login">LOGIN</string>
    <string name="google_login">Gmail login</string>
    <string name="facebook_login">Facebook login</string>
    <string name="terms_title">I have read and agree to the</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="dont_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="already_have_an_account_yet">Already have an account yet ?</string>
    <string name="send">Send</string>
    <string name="forget_password">Forget password</string>
    <string name="forget_password_text">Enter your email address below and we\'ll send you email with instructions on how to change your password</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="please_enter_name">please enter name</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_phone">Please enter phone no</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="please_select_terms">Please select terms and condition option</string>
    <string name="password_not_match">Password and confirm password does not match</string>
    <string name="please_enter_city">Please enter city</string>
    <string name="please_enter_address">Please enter address</string>
    <string name="remove_image">Remove Image</string>
    <string name="gallery">Gallery</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="new_conform_password">New Conform Password</string>
    <string name="please_enter_old_password">Please enter old password</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="please_enter_new_confirm_password">Please enter new confirm password</string>
    <string name="new_password_not_match">New password and new confirm password does not match</string>
    <string name="items">items</string>
    <string name="please_enter_keyWord">Please enter keyword</string>
    <string name="search">Search event</string>
    <string name="loading">Loading....</string>
    <string name="event_title">Event Title</string>
    <string name="website">Website</string>
    <string name="event_ticket">Event Maximum Tickets</string>
    <string name="personTicket">Person Wise Tickets</string>
    <string name="ticket_price">Ticket Price</string>
    <string name="description">Description</string>
    <string name="venue">Venue</string>
    <string name="event_banner">Event Banner</string>
    <string name="event_logo_thumbnail">Event Logo (Thumbnail)</string>
    <string name="recommended_size">! Recommended size 1200 * 450 pixels Maximum image size is 700 kb</string>
    <string name="recommended_size_logo">! Recommended size 200 * 200 pixels Maximum image size is 700 kb</string>
    <string name="event_gallery">Event Gallery</string>
    <string name="event_start_time_date"><![CDATA[Event start and end date & time]]></string>
    <string name="register_start_time_date"><![CDATA[Event register start and end date & time]]></string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="textView_enter_lat_lon">Enter Latitude And Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">longitude</string>
    <string name="to">To</string>
    <string name="update_event">Update Event</string>
    <string name="selected_category">Select Category</string>
    <string name="please_enter_latitude">Please enter latitude</string>
    <string name="please_enter_longitude">Please enter longitude</string>
    <string name="please_enter_title">Please enter title</string>
    <string name="please_enter_website">Please enter website</string>
    <string name="please_enter_ticket">Please enter ticket</string>
    <string name="please_enter_personTicket">Please enter person ticket</string>
    <string name="please_enter_properTicket">Person wise tickets is greater than maximum tickets please enter proper tickets</string>
    <string name="please_enter_price">Please enter price</string>
    <string name="please_select_logo">Please select logo</string>
    <string name="please_select_banner">Please select banner</string>
    <string name="please_select_gallery">Please select gallery</string>
    <string name="please_select_ticket">Please select ticket</string>
    <string name="please_enter_eventStarting_date">Please enter event date</string>
    <string name="please_enter_eventRegister_date">Please enter event register date</string>
    <string name="please_enter_proper_eventStarting_date">Please select proper event starting date and end date</string>
    <string name="please_enter_proper_eventRegister_date">Please select proper event register date and end date</string>
    <string name="please_enter_eventStarting_time">Please enter event time</string>
    <string name="please_enter_eventRegister_time">Please enter event register time</string>
    <string name="please_select_category">Please select category</string>
    <string name="please_select_option">Please select option</string>
    <string name="submit">Submit</string>
    <string name="registration_closed">Registration Closed</string>
    <string name="register_open">Your event registration is open</string>
    <string name="register_close">Currently your event registration is closed !</string>
    <string name="please_select_register">Please select registration closed or not</string>
    <string name="find_location_link">https://www.latlong.net/</string>
    <string name="find_location"><![CDATA[Find your latitude & longitude]]></string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="maximum_ticket">Maximum ticket</string>
    <string name="remaining_ticket">Remaining ticket</string>
    <string name="event_date_time"><![CDATA[Event Date & Time]]></string>
    <string name="register_date_time"><![CDATA[Register Date & Time]]></string>
    <string name="download_ticket">Download Ticket</string>
    <string name="view_ticket">View Ticket</string>
    <string name="report">Report</string>
    <string name="report_sub">Will check what\'s wrong</string>
    <string name="copyright">Copyright</string>
    <string name="sexual">Sexual</string>
    <string name="other">Other</string>
    <string name="your_message">Your Message</string>
</resources>