<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="15dp"
    android:paddingEnd="15dp">

    <ImageView
        android:id="@+id/imageView_logo_report_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_black_report"
        app:tint="@color/image_color"
        app:layout_constraintBottom_toBottomOf="@+id/textView_des_report_fragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_title_report_fragment" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView_title_report_fragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/report"
        android:textColor="@color/textView_title_ed"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView_logo_report_fragment"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView_des_report_fragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/report_sub"
        android:textColor="@color/textView_ed"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/textView_title_report_fragment"
        app:layout_constraintStart_toStartOf="@+id/textView_title_report_fragment"
        app:layout_constraintTop_toBottomOf="@+id/textView_title_report_fragment" />

    <View
        android:id="@+id/view_option_report_fragment"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/view_ce"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_des_report_fragment" />

    <RadioGroup
        android:id="@+id/radioGroup_report_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_option_report_fragment">

        <RadioButton
            android:id="@+id/radioButton_one_report_fragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/copyright" />

        <RadioButton
            android:id="@+id/radioButton_two_report_fragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sexual" />

        <RadioButton
            android:id="@+id/radioButton_three_report_fragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/other" />

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput_report_fragment"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/report"
        android:textColorHint="@color/textView_hint_pro"
        app:boxStrokeColor="@color/textView_box_select_color"
        app:hintTextColor="@color/textView_hint_layout_pro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_report_fragment">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_report_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:maxLines="4"
            android:minLines="4"
            android:textColor="@color/editText_pro"
            android:theme="@style/editText_style" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_send_report_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/send"
        app:cornerRadius="5dp"
        android:textColor="@color/white"
        app:backgroundTint="@color/button_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInput_report_fragment"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>