<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context="com.miraz.helloju.activity.EventBooking">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_event_booking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout_event_booking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_event_booking">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/con_event_booking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_name_event_booking"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/name"
                android:textColorHint="@color/textView_hint_pro"
                app:boxStrokeColor="@color/textView_box_select_color"
                app:hintTextColor="@color/textView_hint_layout_pro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_name_event_booking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/editText_pro"
                    android:theme="@style/editText_style" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_email_event_booking"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/email"
                android:textColorHint="@color/textView_hint_pro"
                app:boxStrokeColor="@color/textView_box_select_color"
                app:hintTextColor="@color/textView_hint_layout_pro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInput_name_event_booking">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_email_event_booking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/editText_pro"
                    android:theme="@style/editText_style" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_phoNo_event_booking"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/phoneNo"
                android:textColorHint="@color/textView_hint_pro"
                app:boxStrokeColor="@color/textView_box_select_color"
                app:hintTextColor="@color/textView_hint_layout_pro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInput_email_event_booking">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_phoNo_event_booking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textColor="@color/editText_pro"
                    android:theme="@style/editText_style" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_event_booking"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/spinner_all_bg"
                android:prompt="@string/app_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInput_phoNo_event_booking" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_down"
                app:layout_constraintBottom_toBottomOf="@+id/spinner_event_booking"
                app:layout_constraintEnd_toEndOf="@+id/spinner_event_booking"
                app:layout_constraintTop_toTopOf="@+id/spinner_event_booking" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_message_event_booking"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/your_message"
                android:textColorHint="@color/textView_hint_pro"
                app:boxStrokeColor="@color/textView_box_select_color"
                app:hintTextColor="@color/textView_hint_layout_pro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_event_booking">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_message_event_booking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:minHeight="120dp"
                    android:textColor="@color/editText_pro"
                    android:theme="@style/editText_style" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_event_booking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@color/button_bg"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInput_message_event_booking"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include
        layout="@layout/no_data_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout_event_booking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>